--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+# convert this to kubernetes
 name: kubernetes-test
 version: '1.0'
 services:
   server:
+    image:  kubernetes-test-server:1.0
     build: src/server
     container_name: fastapi-server
     environment:
