--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ name: kubernetes-test
 version: '1.0'
 services:
   server:
-    image:  kubernetes-test-server:1.0
+    image: daraniel/kubernetes-test-server:latest
     build: src/server
     container_name: fastapi-server
     environment:
