fix automated running tests

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,5 +27,5 @@ jobs:
           pip install -r src/server/requirements.txt
       - name: Test with pytest
         run: |
-          export PYTHONPATH=$PYTHONPATH:/src/client:/src/server
+          export PYTHONPATH=$PYTHONPATH:/src/server
           python -m unittest discover -s ./test  -p 'test_*.py'
