--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,9 +1,16 @@
 name: Publish Docker image
 
+#on:
+#  release:
+#    types: [ published ]
+#  workflow_dispatch:
+
+# Only trigger when the Python package workflow succeeded
 on:
-  release:
-    types: [published]
-  workflow_dispatch:
+  workflow_run:
+    workflows: [ "Python package" ]
+    types:
+      - completed
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -14,24 +21,25 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-      
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: daraniel/kubernetes-test-server
-      
+
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: ./src/server
           file: src/server/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          #          tags: ${{ steps.meta.outputs.tags }}
+          tags: latest
           labels: ${{ steps.meta.outputs.labels }}
