--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -27,3 +27,6 @@ typing_extensions==4.9.0
 uvicorn==0.24.0.post1
 wheel==0.42.0
 zipp==3.17.0
+dnspython==2.4.2
+protobuf==3.20.3
+mysql-connector-python==8.0.32
