--- a/kubernetes_resources/deploy_and_serve.yaml
+++ b/kubernetes_resources/deploy_and_serve.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: fastapi-server
-          image: daraniel/kubernetes-test-server:latest
+          image: daraniel/kubernetes-test-server:master
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
