--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,7 +8,7 @@ name: Publish Docker image
 # Only trigger when the Python package workflow succeeded
 on:
   workflow_run:
-    workflows: [ "Python package" ]
+    workflows: [ "UnitTest" ]
     types:
       - completed
 jobs:
