--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -6,25 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Format code with black
-        run: |
-          pip install black
-          black .
-      - name: Sort imports with isort
-        run: |
-          pip install isort
-          isort .
-      - name: Remove unused imports with autoflake
-        run: |
-          pip install autoflake
-          autoflake --in-place --remove-all-unused-imports --remove-unused-variables --recursive .
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
+      - uses: actions/setup-python@v5
         with:
-          default_author: github_actions
-          committer_name: GitHub Actions
-          committer_email: actions@github.com
-          #          author_name: ${{ github.actor }}
-          #          author_email: ${{ github.actor }}@users.noreply.github.com
-          message: "Format code with black"
-          add: "."
+          python-version: "3.x"
+      - uses: pre-commit/action@v3.0.0
